5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1575_579.log
== TEST (2019-03-12 20:30:07) 
-- CODE:
print(#A UFAM tem", 2016-1914, "anos de fundacao.")
	
-- ERROR:
File "XXXX", line 3
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:30:10) 
-- CODE:
print(#A UFAM tem", 2016-1914, "anos de fundacao.")
	
-- EXECUTION TIME:
0.140644
-- ERROR:
  File "/home/codebench/codes/1575/579/main.py", line 3
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:30:41) 
-- CODE:
print(#A UFAM tem", 2016-1909, "anos de fundacao.")
	
-- EXECUTION TIME:
0.141217
-- ERROR:
  File "/home/codebench/codes/1575/579/main.py", line 3
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:30:43) 
-- CODE:
print(#A UFAM tem", 2016-1909, "anos de fundacao.")
	
-- ERROR:
File "XXXX", line 3
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:30:53) 
-- CODE:
print("A UFAM tem", 2016-1909, "anos de fundacao.")
	
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:30:56) 
-- CODE:
print("A UFAM tem", 2016-1909, "anos de fundacao.")
	
-- EXECUTION TIME:
0.231521
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
